# aleph

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.config/: hakari.toml
.zed/: settings.json
assets/badge/: v0.json
assets/keymaps/: default-macos.json  initial.json
assets/settings/: default.json  initial_user_settings.json
crates/acp_thread/: Cargo.toml
crates/acp_tools/: Cargo.toml
crates/action_log/: Cargo.toml
crates/action_log/src/: action_log.rs
crates/activity_indicator/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: agent_profile.rs  context.rs  history_store.rs  thread.rs  thread_store.rs
crates/agent2/: Cargo.toml
crates/agent2/src/: agent.rs  agent2.rs  db.rs  history_store.rs  native_agent_server.rs  templates.rs  thread.rs
crates/agent2/src/tools/: edit_file_tool.rs  find_path_tool.rs  grep_tool.rs  list_directory_tool.rs  open_tool.rs  read_file_tool.rs
crates/agent_servers/: Cargo.toml
crates/agent_servers/src/: agent_servers.rs  claude.rs  custom.rs  gemini.rs
crates/agent_settings/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/assistant_context/: Cargo.toml
crates/assistant_slash_command/: Cargo.toml
crates/assistant_slash_commands/: Cargo.toml
crates/assistant_tool/: Cargo.toml
crates/assistant_tool/src/: tool_schema.rs  tool_working_set.rs
crates/assistant_tools/: Cargo.toml
crates/assistant_tools/src/: assistant_tools.rs  edit_agent.rs  edit_file_tool.rs  find_path_tool.rs  grep_tool.rs  list_directory_tool.rs  open_tool.rs  project_notifications_tool.rs  read_file_tool.rs  terminal_tool.rs
crates/assistant_tools/src/edit_agent/: create_file_parser.rs  edit_parser.rs  evals.rs  streaming_fuzzy_matcher.rs
crates/assistant_tools/src/edit_agent/evals/fixtures/disable_cursor_blinking/: before.rs
crates/assistant_tools/src/edit_agent/evals/fixtures/use_wasi_sdk_in_compile_parser_to_wasm/: before.rs
crates/assistant_tools/src/templates/: edit_file_prompt_xml.hbs
crates/breadcrumbs/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/call/: Cargo.toml
crates/call/src/call_impl/: mod.rs  participant.rs  room.rs
crates/channel/: Cargo.toml
crates/channel/src/: channel.rs  channel_store.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  telemetry.rs  user.rs  zed_urls.rs
crates/clock/: Cargo.toml
crates/cloud_api_types/: Cargo.toml
crates/cloud_llm_client/: Cargo.toml
crates/collab/: Cargo.toml
crates/collab/migrations/: 20220913211150_create_signups.sql
crates/collab/src/: auth.rs  db.rs  executor.rs  lib.rs  main.rs  rpc.rs
crates/collab/src/db/: tests.rs
crates/collab/src/db/queries/: channels.rs
crates/collab/src/db/tables/: signup.rs
crates/collab/src/db/tests/: db_tests.rs
crates/collab/src/llm/: db.rs
crates/collab/src/rpc/: connection_pool.rs
crates/collab/src/tests/: following_tests.rs  integration_tests.rs
crates/collab_ui/: Cargo.toml
crates/collections/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/context_server/: Cargo.toml
crates/copilot/: Cargo.toml
crates/copilot/src/: copilot.rs  copilot_chat.rs  copilot_completion_provider.rs
crates/crashes/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap_adapters/: Cargo.toml
crates/dap_adapters/src/: codelldb.rs  dap_adapters.rs  go.rs  python.rs
crates/db/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/debugger_ui/src/: attach_modal.rs  debugger_panel.rs  debugger_ui.rs  new_process_modal.rs  persistence.rs
crates/debugger_ui/src/session/: running.rs
crates/debugger_ui/src/session/running/: console.rs  module_list.rs  stack_frame_list.rs  variable_list.rs
crates/debugger_ui/src/tests/: stack_frame_list.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: diagnostics.rs
crates/edit_prediction_button/: Cargo.toml
crates/edit_prediction_button/src/: edit_prediction_button.rs
crates/editor/: Cargo.toml
crates/extension/: Cargo.toml
crates/extension_api/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/feature_flags/: Cargo.toml
crates/feature_flags/src/: feature_flags.rs
crates/feedback/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/fs/: Cargo.toml
crates/git/: Cargo.toml
crates/git_hosting_providers/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/go_to_line/: Cargo.toml
crates/gpui/: Cargo.toml  README.md  build.rs
crates/html_to_markdown/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_client_tls/: Cargo.toml
crates/icons/: Cargo.toml
crates/image_viewer/: Cargo.toml
crates/inspector_ui/: Cargo.toml
crates/inspector_ui/src/: inspector_ui.rs
crates/journal/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_models/src/: language_models.rs  provider.rs  settings.rs
crates/language_models/src/provider/: anthropic.rs  bedrock.rs  cloud.rs  copilot_chat.rs  google.rs  mistral.rs  open_ai.rs  open_router.rs
crates/language_tools/: Cargo.toml
crates/language_tools/src/: language_tools.rs  lsp_log_view.rs
crates/livekit_client/: Cargo.toml
crates/livekit_client/src/: lib.rs  mock_client.rs  remote_video_track_view.rs
crates/livekit_client/src/livekit_client/: playback.rs
crates/net/: Cargo.toml
crates/net/src/: async_net.rs  net.rs
crates/rope/: Cargo.toml
crates/rope/src/: chunk.rs  point.rs  point_utf16.rs  rope.rs
crates/scheduler/: Cargo.toml
crates/semantic_index/: Cargo.toml
crates/semantic_index/src/: chunking.rs  embedding.rs  project_index.rs  semantic_index.rs  summary_index.rs  worktree_index.rs
crates/supermaven/: Cargo.toml
crates/supermaven/src/: supermaven.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: terminal_element.rs  terminal_panel.rs  terminal_path_like_target.rs  terminal_view.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: application_menu.rs  collab.rs  onboarding_banner.rs  platform_title_bar.rs  title_bar.rs
script/: bundle-mac  check-keymaps  cleanup  clippy  uninstall.sh
(+461 files in other folders)
