[package]
name = "assistant_tool"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/assistant_tool.rs"

[dependencies]
action_log.workspace = true
anyhow.workspace = true
collections.workspace = true
derive_more.workspace = true
gpui.workspace = true
icons.workspace = true
language.workspace = true
language_model.workspace = true
log.workspace = true
parking_lot.workspace = true
project.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
text.workspace = true
util.workspace = true
workspace.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
collections.workspace = true
gpui.workspace = true
language.workspace = true
language_model.workspace = true
log.workspace = true
project.workspace = true
text.workspace = true
util.workspace = true
