[package]
name = "call"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/call.rs"
doctest = false

[dependencies]
anyhow.workspace = true
audio.workspace = true
client.workspace = true
collections.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
postage.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
serde_derive.workspace = true
settings.workspace = true
telemetry.workspace = true
util.workspace = true
gpui_tokio.workspace = true
livekit_client.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
client.workspace = true
collections.workspace = true
fs.workspace = true
gpui.workspace = true
language.workspace = true
project.workspace = true
util.workspace = true
livekit_client.workspace = true
