[package]
name = "channel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/channel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
client.workspace = true
clock.workspace = true
collections.workspace = true
futures.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
postage.workspace = true
rand.workspace = true
rpc.workspace = true
settings.workspace = true
sum_tree.workspace = true
text.workspace = true
time.workspace = true
util.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
collections.workspace = true
gpui.workspace = true
rpc.workspace = true
client.workspace = true
settings.workspace = true
util.workspace = true
