[package]
name = "client"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true

[lib]
doctest = false
path = "src/client.rs"

[dependencies]
anyhow.workspace = true
async-tungstenite = { workspace = true, features = [
  "tokio",
  "tokio-rustls-manual-roots",
] }
base64.workspace = true
clock.workspace = true
collections.workspace = true
credentials_provider.workspace = true
derive_more.workspace = true
feature_flags.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
http_client.workspace = true
http_client_tls.workspace = true
httparse = "1.10"
log.workspace = true
objc2-foundation.workspace = true
parking_lot.workspace = true
paths.workspace = true
postage.workspace = true
rand.workspace = true
regex.workspace = true
release_channel.workspace = true
rpc = { workspace = true, features = ["gpui"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
settings.workspace = true
sha2.workspace = true
smol.workspace = true
telemetry.workspace = true
telemetry_events.workspace = true
thiserror.workspace = true
time.workspace = true
tiny_http.workspace = true
tokio.workspace = true
tokio-native-tls = "0.3"
tokio-socks = { version = "0.5.2", default-features = false, features = [
  "futures-io",
] }
url.workspace = true
util.workspace = true
workspace-hack.workspace = true
worktree.workspace = true

[dev-dependencies]
clock.workspace = true
collections.workspace = true
gpui.workspace = true
http_client.workspace = true
rpc.workspace = true
settings.workspace = true
util.workspace = true

[lints]
workspace = true
