[package]
authors = ["Nathan Sobo <nathan@zed.dev>"]
default-run = "collab"
edition.workspace = true
name = "collab"
version = "0.44.0"
publish.workspace = true
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "collab"

[features]
sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]

[dependencies]
anyhow.workspace = true
async-tungstenite.workspace = true
aws-config = { version = "1.1.5" }
aws-sdk-kinesis = "1.51.0"
aws-sdk-s3 = { version = "1.15.0" }
axum = { version = "0.6", features = ["json", "headers", "ws"] }
axum-extra = { version = "0.4", features = ["erased-json"] }
base64.workspace = true
chrono.workspace = true
clock.workspace = true
collections.workspace = true
dashmap.workspace = true
envy = "0.4.2"
futures.workspace = true
hex.workspace = true
livekit_api.workspace = true
log.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
prometheus = "0.14"
prost.workspace = true
reqwest = { version = "0.11", features = ["json"] }
reqwest_client.workspace = true
rpc.workspace = true
rustc-demangle.workspace = true
scrypt = "0.11"
sea-orm = { version = "1.1.0-rc.1", features = [
    "sqlx-postgres",
    "postgres-array",
    "runtime-tokio-rustls",
    "with-uuid",
] }
semantic_version.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "time",
    "uuid",
    "any",
] }
strum.workspace = true
subtle.workspace = true
supermaven_api.workspace = true
telemetry_events.workspace = true
text.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tower = "0.4"
tower-http = { workspace = true, features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "registry",
    "tracing-log",
] } # workaround for https://github.com/tokio-rs/tracing/issues/2927
util.workspace = true
uuid.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
channel.workspace = true
collections.workspace = true
extension.workspace = true
fs.workspace = true
project.workspace = true
rpc.workspace = true
sea-orm = { version = "1.1.0-rc.1", features = ["sqlx-sqlite"] }
serde_json.workspace = true
sqlx = { version = "0.8", features = ["sqlite"] }
util.workspace = true
worktree.workspace = true
