[package]
name = "copilot"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/copilot.rs"
doctest = false

[features]
default = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
collections.workspace = true
command_palette_hooks.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
edit_prediction.workspace = true
language.workspace = true
log.workspace = true
lsp.workspace = true
menu.workspace = true
node_runtime.workspace = true
parking_lot.workspace = true
paths.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
sum_tree.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
workspace-hack.workspace = true
itertools.workspace = true

[dev-dependencies]
collections.workspace = true
fs.workspace = true
gpui.workspace = true
http_client.workspace = true
language.workspace = true
lsp.workspace = true
node_runtime.workspace = true
project.workspace = true
serde_json.workspace = true
settings.workspace = true
util.workspace = true
workspace.workspace = true
