[package]
name = "debugger_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/debugger_ui.rs"
doctest = false

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
bitflags.workspace = true
collections.workspace = true
dap.workspace = true
db.workspace = true
debugger_tools.workspace = true
editor.workspace = true
file_icons.workspace = true
futures.workspace = true
fuzzy.workspace = true
gpui.workspace = true
hex.workspace = true
itertools.workspace = true
language.workspace = true
log.workspace = true
menu.workspace = true
notifications.workspace = true
parse_int.workspace = true
paths.workspace = true
picker.workspace = true
project.workspace = true
rpc.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
settings.workspace = true
shlex.workspace = true
sysinfo.workspace = true
task.workspace = true
tasks_ui.workspace = true
telemetry.workspace = true
terminal_view.workspace = true
text.workspace = true
theme.workspace = true
tree-sitter-json.workspace = true
tree-sitter.workspace = true
ui.workspace = true
util.workspace = true
workspace-hack.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
dap.workspace = true
debugger_tools.workspace = true
editor.workspace = true
gpui.workspace = true
project.workspace = true
util.workspace = true
workspace.workspace = true
